--- a/MqttComm/MqttComm.csproj
+++ b/MqttComm/MqttComm.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+	<ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
