--- a/DisplayMqtt/DisplayMqtt.csproj
+++ b/DisplayMqtt/DisplayMqtt.csproj
@@ -14,6 +14,7 @@
 	<PackageReference Include="Serilog.Exceptions" Version="8.3.0" />
 	<PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
 	<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+	<PackageReference Include="System.Device.Gpio" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
