--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,13 +6,21 @@ on:
   pull_request:
     branches: [ "master" ]
 
-jobs:
+env:
+  TAG: $(date +%s)
 
-  build:
+jobs:
+  build_upload:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag binclock:$(date +%s)
+      run: docker build . --file Dockerfile --tag binclock:$TAG
+
+    - name: Upload image
+      uses: ishworkh/docker-image-artifact-upload@v1
+      with:
+        image: "binclock:$TAG"
