--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,9 +18,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Build the Docker image
-      run: docker build .  --file Dockerfile --tag "binclock:$IMAGE_TAG"
+      run: docker build .  --file Dockerfile --tag binclock:$(date +%s)
 
     - name: Upload image
       uses: ishworkh/docker-image-artifact-upload@v1
       with:
-        image: "binclock:$IMAGE_TAG"
+        image: binclock:$(date +%s)
