--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Compose docker files
-      run: docker compose up
+      run: docker compose build
 
     - name: Save docker artifact, Clock
       run: docker save -o clock.tar clockmsa_mqtt_clock
