--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     build:
       context: .
       target: clock
+      cache_to: 
+       - user/app:cache
+       - type=local,dest=path/to/cache
   display:
     build:
       context: .
