--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Compose docker files
-      run: docker compose build
+#    - name: Compose docker files
+#      run: docker compose build
 
     - name: Create docker artifact, Clock
       run: docker image build -f ClockMqtt/Dockerfile --output type=tar,dest=clock.tar .
