--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,15 +7,6 @@ on:
     branches: [ "master" ]
 
 jobs:
-  test_upload:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Upload a Build Artifact, Test
-      uses: actions/upload-artifact@v3
-      with:
-        name: test_artifact
-        path: /*
-        
 #  compose:
 #    runs-on: ubuntu-latest
 #    steps:
@@ -27,7 +18,6 @@ jobs:
   create_artifacts:
     runs-on: ubuntu-latest
     steps:
-
     - uses: actions/checkout@v3
     
     - name: Create docker artifact, Clock
@@ -39,9 +29,20 @@ jobs:
     - name: Create docker artifact, Timer
       run: docker image build -f TimerMqtt/Dockerfile --output type=tar,dest=timer.tar .
 
+  test_upload:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Upload a Build Artifact, Test
+      uses: actions/upload-artifact@v3
+      with:
+        name: test_artifact
+        path: /home/runner/work/ClockMSA_Mqtt/*.tar
+        
   upload_artifacts:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
     
     - name: Upload a Build Artifact, Clock
       uses: actions/upload-artifact@v3
