--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: test_artifact
-        path: ./*.tar
+        path: ./*.*
         
 #  upload_artifacts:
 #    runs-on: ubuntu-latest
