--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,13 +7,13 @@ on:
     branches: [ "master" ]
 
 jobs:
-#  compose:
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v3
-#
-#    - name: Compose docker files
-#      run: docker compose build
+  compose:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Compose docker files
+      run: docker compose build
 
   create_artifacts:
     runs-on: ubuntu-latest
@@ -24,27 +24,22 @@ jobs:
       run: DOCKER_BUILDKIT=1 docker image build -f ClockMqtt/Dockerfile --output type=tar,dest=clock.tar .
 
     - name: Create docker artifact, Display
-      run: docker image build -f DisplayMqtt/Dockerfile --output type=tar,dest=display.tar .
+      run: DOCKER_BUILDKIT=1 docker image build -f DisplayMqtt/Dockerfile --output type=tar,dest=display.tar .
 
     - name: Create docker artifact, Timer
-      run: docker image build -f TimerMqtt/Dockerfile --output type=tar,dest=timer.tar .
+      run: DOCKER_BUILDKIT=1 docker image build -f TimerMqtt/Dockerfile --output type=tar,dest=timer.tar .
 
-#  test_upload:
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v3
- 
-    - name: Upload a Build Artifact, Test
+  upload_artifacts:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Upload a Build Artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: test_artifact
-        path: ./*.*
-        
-#  upload_artifacts:
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v3
-    
+        name: Images
+        path: ./*.tar
+
     - name: Upload a Build Artifact, Clock
       uses: actions/upload-artifact@v3
       with:
