--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,11 +30,12 @@ jobs:
       run: DOCKER_BUILDKIT=1 docker image build -f TimerMqtt/Dockerfile --output type=tar,dest=timer.tar .
 
   upload_artifacts:
+    needs: create_artifacts
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
 
-    - name: Upload a Build Artifacts
+    - name: Upload Build Artifacts
       uses: actions/upload-artifact@v3
       with:
         name: Images
