--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,7 @@ jobs:
       run: docker compose build
 
   create_artifacts:
+    needs: compose
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -29,26 +30,12 @@ jobs:
     - name: Create docker artifact, Timer
       run: DOCKER_BUILDKIT=1 docker image build -f TimerMqtt/Dockerfile --output type=tar,dest=timer.tar .
 
+  upload_artifacts:
+    needs: create_artifacts
+    runs-on: ubuntu-latest
+    steps:
     - name: Upload Build Artifacts
       uses: actions/upload-artifact@v3
       with:
         name: Images
         path: ./*.tar
-
-    - name: Upload a Build Artifact, Clock
-      uses: actions/upload-artifact@v3
-      with:
-        name: ClockImage
-        path: clock.tar
-
-    - name: Upload a Build Artifact, Display
-      uses: actions/upload-artifact@v3
-      with:
-        name: DisplayImage
-        path: display.tar
-
-    - name: Upload a Build Artifact, Timer
-      uses: actions/upload-artifact@v3
-      with:
-        name: TimerImage
-        path: timer.tar
