--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,16 +7,15 @@ on:
     branches: [ "master" ]
 
 jobs:
-  compose:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Compose docker files
-      run: docker compose build
+#  compose:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - uses: actions/checkout@v3
+#
+#    - name: Compose docker files
+#      run: docker compose build
 
   create_artifacts:
-    needs: compose
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
