--- a/ClockMqtt/Dockerfile
+++ b/ClockMqtt/Dockerfile
@@ -3,9 +3,9 @@
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS publish
 WORKDIR /src
 COPY . ./
-RUN dotnet publish ./ClockMqtt/ClockMqtt.sln -c Release -o /app/Clock -r linux-arm64 --self-contained
+RUN dotnet publish ./ClockMqtt/ClockMqtt.sln -c Release -o /app/Clock -r linux-x64 --self-contained
 
 FROM ubuntu:focal as clock
 WORKDIR /app
 COPY --from=publish /app/Clock/ .
-ENTRYPOINT ["/app/ClockMqtt"]
+ENTRYPOINT /bin/bash
