--- a/TimerMqtt/Dockerfile
+++ b/TimerMqtt/Dockerfile
@@ -3,9 +3,9 @@
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS publish
 WORKDIR /src
 COPY . ./
-RUN dotnet publish ./TimerMqtt/TimerMqtt.sln -c Release -o /app/Timer -r linux-arm64 --self-contained
+RUN dotnet publish ./TimerMqtt/TimerMqtt.sln -c Release -o /app/Timer -r linux-x64 --self-contained
 
 FROM ubuntu:focal AS timer
 WORKDIR /app
 COPY --from=publish /app/Timer/ .
-ENTRYPOINT ["/app/TimerMqtt"]
+ENTRYPOINT /bin/bash
