--- a/.github/workflows/docker-upload.yml
+++ b/.github/workflows/docker-upload.yml
@@ -32,8 +32,14 @@ jobs:
     - name: Build the Docker image, display
       run: DOCKER_BUILDKIT=1 docker build . -f DisplayMqtt/Dockerfile -t $DOCKER_USER/$DOCKER_REPO_NAME:display_$(date +%s)
     
+    - name: Tag the Docker image, display
+      run: docker image tag $DOCKER_USER/$DOCKER_REPO_NAME:display_latest $DOCKER_USER/$DOCKER_REPO_NAME:display_$(date +%s)
+    
     - name: Build the Docker image, timer
       run: DOCKER_BUILDKIT=1 docker build . -f TimerMqtt/Dockerfile -t $DOCKER_USER/$DOCKER_REPO_NAME:timer_$(date +%s)
+    
+    - name: Tag the Docker image, timer
+      run: docker image tag $DOCKER_USER/$DOCKER_REPO_NAME:timer_latest $DOCKER_USER/$DOCKER_REPO_NAME:timer_$(date +%s)
       
     - name: Upload images
       run: docker push $DOCKER_USER/$DOCKER_REPO_NAME -a
