Create basic installer

--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,4 @@ DisplayMqtt/.vscode/launch.json
 DisplayMqtt/.vscode/tasks.json
 TimerMqtt/.vscode/launch.json
 TimerMqtt/.vscode/tasks.json
+/Install/config.json
