--- a/.github/workflows/publish-installer.yml
+++ b/.github/workflows/publish-installer.yml
@@ -1,4 +1,4 @@
-name: Installer
+name: Publish Installer
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Create artifact folder
-      run: mkdir installer
+      run: ls -la
         
     - name: Copy files
       run: cp ./Installer/* /installer
