--- a/.github/workflows/publish-installer.yml
+++ b/.github/workflows/publish-installer.yml
@@ -14,12 +14,9 @@ jobs:
 
     - name: Create artifact folder
       run: ls -la
-        
-    - name: Copy files
-      run: cp ./Installer/* /installer
     
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       with: 
         name: Installer
-        path: installer
+        path: ./Install
